cambio de destacados

--- a/destacados/index.html
+++ b/destacados/index.html
@@ -105,86 +105,66 @@
     <div class="container-fluid p-0">
       <div class="row no-gutters">
 
-        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/bg-showcase-1.jpg');"></div>
+        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/');"></div>
         <div class="col-lg-6 order-lg-1 my-auto showcase-text">
-          <h2>Fully Responsive Design</h2>
-          <p class="lead mb-0">When you use a theme created by Start Bootstrap, you know that the theme will look great on any device, whether it's a phone, tablet, or desktop the page will behave responsively!</p>
+          <h2>Módulo Móvil de Salud</h2>
+          <p class="lead mb-0">Nuestro <b>módulo móvil de salud</b> aporta soluciones temporales o permanentes a hospitales, centros de salud y centros de atención complementarios, ofreciendo edificaciones transportables, especializadas, de rápida construcción,asépticas y resistentes al uso de productos altamente agresivos sin deteriorar su acabado. <br><br>
+            <b>Módulo móvil de salud</b> proporciona respuestas rápidas y eficaces para resolver cualquier déficit de servicio de salud en el lugar deseado con estándares muy altos de <b>confort y limpieza.</b><br><br> </p>
         </div>
       </div>
       <div class="row no-gutters">
         <div class="col-lg-6 text-white showcase-img" style="background-image: url('img/bg-showcase-2.jpg');"></div>
         <div class="col-lg-6 my-auto showcase-text">
-          <h2>Updated For Bootstrap 4</h2>
-          <p class="lead mb-0">Newly improved, and full of great utility classes, Bootstrap 4 is leading the way in mobile responsive web development! All of the themes on Start Bootstrap are now using Bootstrap 4!</p>
+          <h2>Unidad de Vivienda Básica</h2>
+          <p class="lead mb-0">Queremos presentar a nuestros clientes nuestra <b>casa básica</b> para vivienda rural o urbana, cuya versatilidad permite que sea implementada en proyectos individuales o urbanizados. Nos hemos preocupado por enlazar el diseño, la economía y el confort para generar áreas amplias que aseguren las necesidades de habitabilidad en un ambiente basado en la sencillez. </p>
         </div>
       </div>
       <div class="row no-gutters">
         <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/bg-showcase-3.jpg');"></div>
         <div class="col-lg-6 order-lg-1 my-auto showcase-text">
-          <h2>Easy to Use &amp; Customize</h2>
-          <p class="lead mb-0">Landing Page is just HTML and CSS with a splash of SCSS for users who demand some deeper customization options. Out of the box, just add your content and images, and your new landing page will be ready to go!</p>
+          <h2>Campamentos</h2>
+          <p class="lead mb-0">Su aplicación en proyectos de minería, petróleos y construcción contribuye a una excelente solución para las edificaciones provisionales que servirán de oficinas, almacenes, alojamientos, entre otros. Su sistema modular se adapta fácilmente a cualquier diseño y sus características termo-acústicas proveen ambientes de mayor confort, lo que se traduce en mayor productividad. Gracias a los materiales de excelente calidad utilizados en la fabricación de nuestro <b>campamento</b>, este puede ser reutilizado un sin número de veces. </p>
         </div>
       </div>
+      <div class="row no-gutters">
+        <div class="col-lg-6 text-white showcase-img" style="background-image: url('img/bg-showcase-2.jpg');"></div>
+        <div class="col-lg-6 my-auto showcase-text">
+          <h2>Caseta de vigilancia</h2>
+          <p class="lead mb-0">Queremos presentar a nuestros clientes nuestra <b>casa básica</b> para vivienda rural o urbana, cuya versatilidad permite que sea implementada en proyectos individuales o urbanizados. Nos hemos preocupado por enlazar el diseño, la economía y el confort para generar áreas amplias que aseguren las necesidades de habitabilidad en un ambiente basado en la sencillez. </p>
+        </div>
+      </div>    
+      <div class="row no-gutters">
+        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/bg-showcase-3.jpg');"></div>
+        <div class="col-lg-6 order-lg-1 my-auto showcase-text">
+          <h2>Campamentos</h2>
+          <p class="lead mb-0">Pensando en el mejoramiento de las condiciones del personal de seguridad y vigilancia, hemos desarrollado nuestra <b>caseta de vigilancia</b> conservando las formas tradicionales de cubo y ofreciendo los más altos estándares de confort y comodidad que permiten conservar el estado de  alerta a la persona que la habita, adicionalmente proporciona gran visibilidad a su alrededor. Nuestra <b>caseta de vigilancia</b> es resistente a los cambios climáticos, fáciles de instalar, transportables y brindan una excelente presentación arquitectónica.  </p>
+        </div>
+      </div> 
+      <div class="row no-gutters">
+        <div class="col-lg-6 text-white showcase-img" style="background-image: url('img/bg-showcase-2.jpg');"></div>
+        <div class="col-lg-6 my-auto showcase-text">
+          <h2>Cerramientos exterior</h2>
+          <p class="lead mb-0">Nos hemos preocupado por desarrollar un <b>cerramiento exterior</b> con características arquitectónicas diferenciadoras que permiten su vinculación armónica en cualquier lugar de instalación, proporcionando un aspecto agradable gracias a su diseño innovador y diferente. Facilita la seguridad, y privacidad. También es altamente resistente a los agentes climáticos.  </p>
+        </div>
+      </div>    
+      <div class="row no-gutters">
+        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/bg-showcase-3.jpg');"></div>
+        <div class="col-lg-6 order-lg-1 my-auto showcase-text">
+          <h2>Bodegas</h2>
+          <p class="lead mb-0">Gracias a las características mecánicas y físicas del sistema constructivo RBS podemos crear espacios de grandes luces y de alturas considerables en la construcción de <b>bodegas</b> de almacenamiento, procesos industriales actividad logística e incluso eventos culturales de gran escala.La versatilidad y facilidad de montaje nos permite construir <b>bodegas</b> o naves industriales en la mitad del tiempo que sistemas tradicionales. Además, sus bajos costos de mantenimiento hacen que este tipo de edificaciones sean altamente rentables.    </p>
+        </div>
+      </div>   
+      <div class="row no-gutters">
+        <div class="col-lg-6 text-white showcase-img" style="background-image: url('img/bg-showcase-2.jpg');"></div>
+        <div class="col-lg-6 my-auto showcase-text">
+          <h2>Aulas de clase</h2>
+          <p class="lead mb-0">Llegamos con soluciones constructivas para los proyectos educativos en zonas urbanas, rurales y sobre todo en aquellos lugares de difícil acceso. Nuestras <b>aulas de clase</b> se adaptan a cualquier diseño en cualquier tipo de terreno. Proporcionan un acabado integral listo para usar. En la fabricación y construcción de las aulas damos cumplimiento a las normas vigentes para este tipo de edificaciones como lo son su capacidad sismo resistente, niveles de confort, iluminación, entre otros. También resaltamos su capacidad ignifuga y auto extinguible, aséptico y resistente al alto tráfico escolar. </p>
+        </div>
+      </div>    
     </div>
   </section>
 
 
-<!-- Contenido principal -->
-<div class="container">
-  <div class="row">
-    <div class="col-lg-8 col-md-10 mx-auto">
-      <div>
-          <img src="../img/dest/modmovsal.JPG" width="300" style="float: left; padding-bottom: 20px;padding-right: 20px;" alt="hospitales portatiles"> 
-          <h5 class="mt-0 mb-1">Módulo móvil de salud</h5>
-            <p style="text-align: justify;"> Nuestro <b>módulo móvil de salud</b> aporta soluciones temporales o permanentes a hospitales, centros de salud y centros de atención complementarios, ofreciendo edificaciones transportables, especializadas, de rápida construcción,asépticas y resistentes al uso de productos altamente agresivos sin deteriorar su acabado.<img src="../img/dest/modulo-movil-salud.jpg" width="300" style="float: right; padding-bottom: 0px;padding-right: 0px;padding-top: 20px;padding-left: 20px;" alt="hospitales prefabricados"> <b>módulo móvil de salud</b> proporciona respuestas rápidas y eficaces para resolver cualquier déficit de servicio de salud en el lugar deseado con estándares muy altos de <b>confort y limpieza.</b> 
-            </p> 
-      </div>    
-        <br><hr><br>
-      <div>
-          <img src="../img/dest/casintsoc.jpg" width="300" style="float: right; padding-bottom: 20px;padding-right: 0px;padding-left: 20px;" alt="campamentos-pvc">     
-            <h5 class="mt-0 mb-1">Casa base</h5>
-              <p style="text-align: justify;"> Queremos presentar a nuestros Clientes nuestra <b>casa básica</b> para vivienda rural o urbana, cuya versatilidad permite que sea implementada en proyectos individuales o urbanizados. Nos hemos<img src="../img/dest/casa-lilusa-1.jpg" width="300" style="float: left; padding-right: 20px;padding-bottom: 0px;padding-top: 20px;" alt="casas prefabricadas"> preocupado por enlazar el diseño, la economía y el confort para generar áreas amplias que aseguren las necesidades de habitabilidad en un ambiente basado en la sencillez.  
-              </p>    
-        </div>
-        <br><hr><br>
-        <div>
-          <img src="../img/dest/camobr.JPG" width="300" style="float: left; padding-bottom: 20px;padding-right: 20px;" alt="campamentos prefabricados"> 
-          <h5 class="mt-0 mb-1">Campamentos</h5>
-            <p style="text-align: justify;"> Su aplicación en proyectos de minería, petróleos y construcción contribuye a una excelente solución para las edificaciones provisionales que servirán de oficinas, almacenes, alojamientos, entre otros. Su sistema modular se adapta fácilmente a cualquier diseño y sus características termo-acústicas<img src="../img/dest/campamentos-pvc.jpg" width="250" style="float: right; padding-bottom: 0px;padding-right: 0px;padding-top: 20px;padding-left: 20px;" alt="oficinas prefabricadas">proveen ambientes de mayor confort, lo que se traduce en mayor productividad. Gracias a los materiales de excelente calidad utilizados en la fabricación de nuestro <b>campamento</b>, este puede ser reutilizado un sin número de veces. 
-            </p> 
-      </div>    
-        <br><hr><br>
-      <div>
-          <img src="../img/dest/casvig.JPG" width="270" style="float: right; padding-bottom: 20px;padding-right: 0px;padding-left: 20px;" alt="casetas prefabricadas">     
-            <h5 class="mt-0 mb-1">Caseta de vigilancia</h5>
-              <p style="text-align: justify;">  Pensando en el mejoramiento de las condiciones del personal de seguridad y vigilancia, hemos desarrollado nuestra <b>caseta de vigilancia</b> conservando las formas tradicionales de cubo y ofreciendo los más altos estándares de confort y comodidad que permiten conservar el estado de <img src="../img/dest/caseta-vigilancia-1.jpg" width="300" style="float: left; padding-right: 20px;padding-bottom: 0px;padding-top: 20px;" alt="casetas vigilancia"> alerta a la persona que la habita, adicionalmente proporciona gran visibilidad a su alrededor. Nuestra <b>caseta de vigilancia</b> es resistente a los cambios climáticos, fáciles de instalar, transportables y brindan una excelente presentación arquitectónica.  
-              </p>    
-        </div>
-        <br><hr><br>
-        <div>
-          <img src="../img/dest/cer.jpg" width="300" style="float: left; padding-bottom: 20px;padding-right: 20px;" alt="cerramientos pvc"> 
-          <h5 class="mt-0 mb-1">Cerramientos exterior</h5>
-            <p style="text-align: justify;">Nos hemos preocupado por desarrollar un <b>cerramiento exterior</b> con características arquitectónicas diferenciadoras que permiten su vinculación armónica en cualquier lugar de instalación, proporcionando un<img src="../img/dest/cer1.jpg" width="200" style="float: right; padding-bottom: 0px;padding-right: 0px;padding-top: 20px;padding-left: 20px;" alt="cerramientos-prefabricados"> aspecto agradable gracias a su diseño innovador y diferente. Facilita la seguridad, y privacidad. También es altamente resistente a los agentes climáticos. 
-            </p> 
-      </div>    
-        <br><hr><br>
-      <div>
-          <img src="../img/dest/cont.jpg" width="300" style="float: right; padding-bottom: 20px;padding-right: 0px;padding-left: 20px;" alt="contenedores-prefabricados">     
-            <h5 class="mt-0 mb-1">Bodegas</h5>
-              <p style="text-align: justify;">  Gracias a las características mecánicas y físicas del sistema constructivo RBS podemos crear espacios de grandes luces y de alturas considerables en la construcción de <b>bodegas</b> de almacenamiento, procesos industriales actividad logística e incluso eventos culturales de gran escala.<img src="../img/dest/bod1.JPG" width="250" style="float: left; padding-right: 20px;padding-bottom: 0px;padding-top: 20px;" alt="bodegas-pvc">La versatilidad y facilidad de montaje nos permite construir <b>bodegas</b> o naves industriales en la mitad del tiempo que sistemas tradicionales. Además, sus bajos costos de mantenimiento hacen que este tipo de edificaciones sean altamente rentables.  
-              </p>    
-        </div>
-        <br><hr><br>
-        <div>
-          <img src="../img/dest/aul.jpg" width="300" style="float: left; padding-bottom: 20px;padding-right: 20px;" alt="colegios pvc"> 
-          <h5 class="mt-0 mb-1">Aulas de clase</h5>
-            <p style="text-align: justify;">  Llegamos con soluciones constructivas para los proyectos educativos en zonas urbanas, rurales y sobre todo en aquellos lugares de difícil acceso. Nuestras <b>aulas de clase</b> se adaptan a cualquier diseño en cualquier tipo de terreno. Proporcionan un acabado integral listo para usar. En la fabricación y construcción de las aulas damos cumplimiento<img src="../img/dest/colegio-pvc-1.jpg" width="250" style="float: right; padding-bottom: 0px;padding-right: 0px;padding-top: 20px;padding-left: 20px;" alt="colegios-prefabricados"> a las normas vigentes para este tipo de edificaciones como lo son su capacidad sismo resistente, niveles de confort, iluminación, entre otros. También resaltamos su capacidad ignifuga y auto extinguible, aséptico y resistente al alto tráfico escolar.
-            </p> 
-      </div>    
-
-    </div>
-  </div>
-</div>
 <br>
   <hr>
 
