--- a/destacados/index.html
+++ b/destacados/index.html
@@ -105,7 +105,7 @@
     <div class="container-fluid p-0">
       <div class="row no-gutters">
 
-        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/');"></div>
+        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('../img/dest/modulo-movil-salud.jpg');"></div>
         <div class="col-lg-6 order-lg-1 my-auto showcase-text">
           <h2>Módulo Móvil de Salud</h2>
           <p class="lead mb-0">Nuestro <b>módulo móvil de salud</b> aporta soluciones temporales o permanentes a hospitales, centros de salud y centros de atención complementarios, ofreciendo edificaciones transportables, especializadas, de rápida construcción,asépticas y resistentes al uso de productos altamente agresivos sin deteriorar su acabado. <br><br>
@@ -113,54 +113,48 @@
         </div>
       </div>
       <div class="row no-gutters">
-        <div class="col-lg-6 text-white showcase-img" style="background-image: url('img/bg-showcase-2.jpg');"></div>
+        <div class="col-lg-6 text-white showcase-img" style="background-image: url('../img/dest/unidad-vivienda-pvc.jpg');"></div>
         <div class="col-lg-6 my-auto showcase-text">
           <h2>Unidad de Vivienda Básica</h2>
           <p class="lead mb-0">Queremos presentar a nuestros clientes nuestra <b>casa básica</b> para vivienda rural o urbana, cuya versatilidad permite que sea implementada en proyectos individuales o urbanizados. Nos hemos preocupado por enlazar el diseño, la economía y el confort para generar áreas amplias que aseguren las necesidades de habitabilidad en un ambiente basado en la sencillez. </p>
         </div>
       </div>
       <div class="row no-gutters">
-        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/bg-showcase-3.jpg');"></div>
+        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('../img/dest/campamentos-pvc.JPG');"></div>
         <div class="col-lg-6 order-lg-1 my-auto showcase-text">
           <h2>Campamentos</h2>
           <p class="lead mb-0">Su aplicación en proyectos de minería, petróleos y construcción contribuye a una excelente solución para las edificaciones provisionales que servirán de oficinas, almacenes, alojamientos, entre otros. Su sistema modular se adapta fácilmente a cualquier diseño y sus características termo-acústicas proveen ambientes de mayor confort, lo que se traduce en mayor productividad. Gracias a los materiales de excelente calidad utilizados en la fabricación de nuestro <b>campamento</b>, este puede ser reutilizado un sin número de veces. </p>
         </div>
       </div>
       <div class="row no-gutters">
-        <div class="col-lg-6 text-white showcase-img" style="background-image: url('img/bg-showcase-2.jpg');"></div>
+        <div class="col-lg-6 text-white showcase-img" style="background-image: url('../img/dest/caseta-vigilancia-1.jpg');"></div>
         <div class="col-lg-6 my-auto showcase-text">
-          <h2>Caseta de vigilancia</h2>
-          <p class="lead mb-0">Queremos presentar a nuestros clientes nuestra <b>casa básica</b> para vivienda rural o urbana, cuya versatilidad permite que sea implementada en proyectos individuales o urbanizados. Nos hemos preocupado por enlazar el diseño, la economía y el confort para generar áreas amplias que aseguren las necesidades de habitabilidad en un ambiente basado en la sencillez. </p>
+          <h2>Caseta de Vigilancia</h2>
+          <p class="lead mb-0">Pensando en el mejoramiento de las condiciones del personal de seguridad y vigilancia, hemos desarrollado nuestra <b>caseta de vigilancia</b> conservando las formas tradicionales de cubo y ofreciendo los más altos estándares de confort y comodidad que permiten conservar el estado de  alerta a la persona que la habita, adicionalmente proporciona gran visibilidad a su alrededor. Nuestra <b>caseta de vigilancia</b> es resistente a los cambios climáticos, fáciles de instalar, transportables y brindan una excelente presentación arquitectónica.  </p>
         </div>
       </div>    
       <div class="row no-gutters">
-        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/bg-showcase-3.jpg');"></div>
+        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('../img/dest/cerramientos-pvc.jpg');"></div>
         <div class="col-lg-6 order-lg-1 my-auto showcase-text">
-          <h2>Campamentos</h2>
-          <p class="lead mb-0">Pensando en el mejoramiento de las condiciones del personal de seguridad y vigilancia, hemos desarrollado nuestra <b>caseta de vigilancia</b> conservando las formas tradicionales de cubo y ofreciendo los más altos estándares de confort y comodidad que permiten conservar el estado de  alerta a la persona que la habita, adicionalmente proporciona gran visibilidad a su alrededor. Nuestra <b>caseta de vigilancia</b> es resistente a los cambios climáticos, fáciles de instalar, transportables y brindan una excelente presentación arquitectónica.  </p>
-        </div>
-      </div> 
-      <div class="row no-gutters">
-        <div class="col-lg-6 text-white showcase-img" style="background-image: url('img/bg-showcase-2.jpg');"></div>
-        <div class="col-lg-6 my-auto showcase-text">
           <h2>Cerramientos exterior</h2>
           <p class="lead mb-0">Nos hemos preocupado por desarrollar un <b>cerramiento exterior</b> con características arquitectónicas diferenciadoras que permiten su vinculación armónica en cualquier lugar de instalación, proporcionando un aspecto agradable gracias a su diseño innovador y diferente. Facilita la seguridad, y privacidad. También es altamente resistente a los agentes climáticos.  </p>
         </div>
-      </div>    
+      </div> 
       <div class="row no-gutters">
-        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/bg-showcase-3.jpg');"></div>
-        <div class="col-lg-6 order-lg-1 my-auto showcase-text">
+        <div class="col-lg-6 text-white showcase-img" style="background-image: url('../img/dest/bodega-pvc.JPG');"></div>
+        <div class="col-lg-6 my-auto showcase-text">
           <h2>Bodegas</h2>
           <p class="lead mb-0">Gracias a las características mecánicas y físicas del sistema constructivo RBS podemos crear espacios de grandes luces y de alturas considerables en la construcción de <b>bodegas</b> de almacenamiento, procesos industriales actividad logística e incluso eventos culturales de gran escala.La versatilidad y facilidad de montaje nos permite construir <b>bodegas</b> o naves industriales en la mitad del tiempo que sistemas tradicionales. Además, sus bajos costos de mantenimiento hacen que este tipo de edificaciones sean altamente rentables.    </p>
         </div>
-      </div>   
+      </div>    
       <div class="row no-gutters">
-        <div class="col-lg-6 text-white showcase-img" style="background-image: url('img/bg-showcase-2.jpg');"></div>
-        <div class="col-lg-6 my-auto showcase-text">
+        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('../img/dest/colegio-pvc-1.jpg');"></div>
+        <div class="col-lg-6 order-lg-1 my-auto showcase-text">
           <h2>Aulas de clase</h2>
           <p class="lead mb-0">Llegamos con soluciones constructivas para los proyectos educativos en zonas urbanas, rurales y sobre todo en aquellos lugares de difícil acceso. Nuestras <b>aulas de clase</b> se adaptan a cualquier diseño en cualquier tipo de terreno. Proporcionan un acabado integral listo para usar. En la fabricación y construcción de las aulas damos cumplimiento a las normas vigentes para este tipo de edificaciones como lo son su capacidad sismo resistente, niveles de confort, iluminación, entre otros. También resaltamos su capacidad ignifuga y auto extinguible, aséptico y resistente al alto tráfico escolar. </p>
         </div>
-      </div>    
+      </div>   
+  
     </div>
   </section>
 
