--- a/sectores/alimentos-bebidas/index.html
+++ b/sectores/alimentos-bebidas/index.html
@@ -55,10 +55,10 @@
                 <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Sectores</a>
                 <div class="dropdown-menu">
                   <a class="dropdown-item" href="../salud/index.html">Salud</a>
-                  <a class="dropdown-item" href="index.html">Alimentos y bebidas</a>
+                  <a class="dropdown-item" href="index.html">Alimentos y Bebidas</a>
                   <a class="dropdown-item" href="../farmaceutico/index.html">Farmaceútico</a>               
                   <a class="dropdown-item" href="../construccion/index.html">Construcción</a>
-                  <a class="dropdown-item" href="../minerita-petroleo/index.html">Minería y petróleo</a>
+                  <a class="dropdown-item" href="../minerita-petroleo/index.html">Minería y Petróleo</a>
                   <a class="dropdown-item" href="index.html">Plantaciones y ganadería</a>
                 </div>
               </li>
