--- a/sectores/minerita-petroleo/index.html
+++ b/sectores/minerita-petroleo/index.html
@@ -97,7 +97,7 @@
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="site-heading">
-            <h1>Minería y petróleo</h1>
+            <h1>Minería y Petróleo</h1>
           </div>
         </div>
       </div>
