--- a/sectores/salud/index.html
+++ b/sectores/salud/index.html
@@ -57,11 +57,11 @@
               <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Sectores</a>
               <div class="dropdown-menu">
                 <a class="dropdown-item" href="index.html">Salud</a>
-                <a class="dropdown-item" href="../alimentos-bebidas/index.html">Alimentos y bebidas</a>
+                <a class="dropdown-item" href="../alimentos-bebidas/index.html">Alimentos y Bebidas</a>
                 <a class="dropdown-item" href="../farmaceutico/index.html">Farmaceútico</a>               
                 <a class="dropdown-item" href="../construccion/index.html">Construcción</a>
-                <a class="dropdown-item" href="../minerita-petroleo/index.html">Minería y petróleo</a>
-                <a class="dropdown-item" href="../plantaciones-ganaderia/index.html">Plantaciones y ganadería</a>
+                <a class="dropdown-item" href="../minerita-petroleo/index.html">Minería y Petróleo</a>
+                <a class="dropdown-item" href="../plantaciones-ganaderia/index.html">Plantaciones y Ganadería</a>
               </div>
             
               <!-- ---------------------------------------------- -->
@@ -130,7 +130,7 @@
             <img class="imagen-responsiva"  src="../../img/sec/ico/no-virus.svg" width="90" height="90"  alt="aseptico">
           </div>
           <div class="beneficio2">
-            Resistente a productos químicos altamente agresivos y corrosivos.<br>
+            Resistente a químicos agresivos y corrosivos.<br>
             <img class="imagen-responsiva"  src="../../img/sec/ico/lab.svg" width="90 " height="90" alt="resistente-corrosión"> 
           </div>
           <div class="beneficio3">
