--- a/sectores/alimentos-bebidas/index.html
+++ b/sectores/alimentos-bebidas/index.html
@@ -130,7 +130,7 @@
             <img class="imagen-responsiva"  src="../../img/sec/ico/humidity.svg" width="90" height="90"alt="moho">
           </div>
           <div class="beneficio4">
-            Excelentes propiedades térmicas y reflectividad lumínica. <br>
+            Excelentes propiedades térmicas y reflectividad. <br>
             <img class="imagen-responsiva"  src="../../img/sec/ico/reflection.svg" width="90" height="90"alt="aislante">
           </div>
           <div class="beneficio5">
