--- a/contacto/index.html
+++ b/contacto/index.html
@@ -49,7 +49,7 @@
             <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Sectores</a>
             <div class="dropdown-menu">
               <a class="dropdown-item" href="../sectores/salud/index.html">Salud</a>
-              <a class="dropdown-item" href="../sectores/alimentos-bebidas/index.html">Alimentos y bebidas</a>
+              <a class="dropdown-item" href="../sectores/alimentos-bebidas/index.html">Alimentos y Bebidas</a>
               <a class="dropdown-item" href="../sectores/farmaceutico/index.html">Farmaceútico</a>               
               <a class="dropdown-item" href="../sectores/construccion/index.html">Construcción</a>
               <a class="dropdown-item" href="../sectores/minerita-petroleo/index.html">Minería y Petróleo</a>
