--- a/sectores/construccion/index.html
+++ b/sectores/construccion/index.html
@@ -118,56 +118,56 @@
         <!-- beneficios -->
         <div class="grilla">
           <div class="beneficio1">
-            Durabilidad y resistencia. <br>
-            <img class="imagen-responsiva"  src="../../img/sec/ico/durable-fabric.svg" width="90" height="90"alt="casas resistentes">
+            <p>Durabilidad y resistencia.</p>
+            <img class="imagen-responsiva"  src="../../img/sec/ico/durable-fabric.svg" width="100" height="100"alt="casas resistentes">
           </div>
           <div class="beneficio2">
-            Excelente acabado. <br>
-            <img class="imagen-responsiva"  src="../../img/sec/ico/facade.svg" width="90" height="90" alt="excelente acabado" > 
+            <p>Excelente acabado.</p>
+            <img class="imagen-responsiva"  src="../../img/sec/ico/facade.svg" width="100" height="100" alt="excelente acabado" > 
           </div>
           <div class="beneficio3">
-            Aislante térmico y acústico.
-            <img class="imagen-responsiva"  src="../../img/sec/ico/no-music.svg" width="90" height="90" alt="aislamiento termico">
+            <p>Aislante térmico y acústico.</p>
+            <img class="imagen-responsiva"  src="../../img/sec/ico/no-music.svg" width="100" height="100" alt="aislamiento termico">
           </div>
           <div class="beneficio4">
-            Rapidez de construcción. <br>
-            <img class="imagen-responsiva"  src="../../img/sec/ico/sketch.svg" width="90" height="90"alt="construcciones rapidas">
+            <p>Rapidez de construcción.</p>
+            <img class="imagen-responsiva"  src="../../img/sec/ico/sketch.svg" width="100" height="100"alt="construcciones rapidas">
           </div>
           <div class="beneficio5">
-            Bajo costo de mantenimiento. <br>
-            <img class="imagen-responsiva"  src="../../img/sec/ico/affordable.svg" width="90" height="90"alt="bajo mantenimiento">
+            <p>Bajo costo de mantenimiento.</p>
+            <img class="imagen-responsiva"  src="../../img/sec/ico/affordable.svg" width="100" height="100"alt="bajo mantenimiento">
           </div>
           <div class="beneficio6">
-            No requiere acabados. <br>
-            <img class="imagen-responsiva"  src="../../img/sec/ico/cube.svg" width="90" height="90" alt="no acabados">
+            <p>No requiere acabados.</p>
+            <img class="imagen-responsiva"  src="../../img/sec/ico/cube.svg" width="100" height="100" alt="no acabados">
           </div>
           <div class="beneficio7">
-            Construcción limpia. <br>
-            <img class="imagen-responsiva"  src="../../img/sec/ico/mop.svg" width="90" height="90"alt="construccion limpia">
+            <p>Construcción limpia.</p>
+            <img class="imagen-responsiva"  src="../../img/sec/ico/mop.svg" width="100" height="100"alt="construccion limpia">
           </div>
           <div class="beneficio8">
-            Fabricación a la medida disminuyendo desperdicios. <br>
-            <img class="imagen-responsiva"  src="../../img/sec/ico/ruler.svg" width="90" height="90" alt="cero desperdicions">
+            <p>Fabricación a la medida disminuyendo desperdicios.</p>
+            <img class="imagen-responsiva"  src="../../img/sec/ico/ruler.svg" width="100" height="100" alt="cero desperdicions">
           </div>
           <div class="beneficio9">
-            Desmontable - reutilizable.
-            <img class="imagen-responsiva"  src="../../img/sec/ico/recycle.svg" width="90" height="90" alt="reutilizable">
+            <p>Desmontable - reutilizable.</p>
+            <img class="imagen-responsiva"  src="../../img/sec/ico/recycle.svg" width="100" height="100" alt="reutilizable">
           </div>
           <div class="beneficio10">
-            Ignífugo y autoextinguidle. <br>
-            <img class="imagen-responsiva"  src="../../img/sec/ico/no-fire.svg" width="90" height="90" alt="ignifugo autoextinguible">
+            <p>Ignífugo y autoextinguidle.</p>
+            <img class="imagen-responsiva"  src="../../img/sec/ico/no-fire.svg" width="100" height="100" alt="ignifugo autoextinguible">
           </div>
           <div class="beneficio11">
-            Liviano y transportable. <br>
-            <img class="imagen-responsiva"  src="../../img/sec/ico/feather.svg" width="90" height="90" alt="casas prefabricadas">
+            <p>Liviano y transportable.</p>
+            <img class="imagen-responsiva"  src="../../img/sec/ico/feather.svg" width="100" height="100" alt="casas prefabricadas">
           </div>
           <div class="beneficio12">
-            Norma Sismo-resistente. <br>
-            <img class="imagen-responsiva"  src="../../img/sec/ico/cracked-ground-between-houses.svg" width="90" height="90"alt="sismo resistente">
+            <p>Norma Sismo-resistente.</p>
+            <img class="imagen-responsiva"  src="../../img/sec/ico/cracked-ground-between-houses.svg" width="100" height="100"alt="sismo resistente">
           </div>
           <div class="beneficio13">
-            Código Sanitario. <br>
-            <img class="imagen-responsiva"  src="../../img/sec/ico/verify.svg" width="90" height="90" alt="codigo sanitario">
+            <p>Código Sanitario.</p>
+            <img class="imagen-responsiva"  src="../../img/sec/ico/verify.svg" width="100" height="100" alt="codigo sanitario">
           </div>
         </div>
 
